demo/config-management/out-of-scope/namespaces/store-out-of-scope/testing.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: nginx-ingress
  namespace: store-out-of-scope
spec:
  hosts:
  - "*"
  gateways:
  - istio-system/istio-ingressgateway
  http:
  - route:
    - destination:
#        host: nginx.store-out-of-scope.svc.cluster.local
        host: currencyservice.store-out-of-scope.svc.cluster.local
        port:
          number: 7000
